@startuml
scale 2
class Source {
    String name
    Date start_collect
    Date end_collect
    String input_file

    common_process()
    custom_process()
    process()


}

class Survey {
    custom_process()

}

class Census {
    custom_process()

}

class Webscrapping {
    custom_process()

}

class AdministrativeFile {
    custom_process()

}

Source <|-- Survey
Source <|-- Census
Source <|-- Webscrapping
Source <|-- AdministrativeFile

@enduml